Moves api to app and update docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,17 +35,6 @@ services:
      ports:
       - "8080:80"
 
-   api:
-     depends_on:
-       - oracledb
-     image: adrianharabula/php7-with-oci8
-     links:
-      - oracledb
-     volumes:
-      - ./api:/var/www/html
-     ports:
-      - "8181:80"
-
    psgbd_etapa2:
      depends_on:
        - oracledb
@@ -53,7 +42,7 @@ services:
      links:
       - oracledb
      volumes:
-      - ./database_design/psgbd-etapa2:/var/www/html
+      - ./psgbd/etapa2:/var/www/html
      ports:
       - "8282:80"
 
