--- a/app/.env.example
+++ b/app/.env.example
@@ -2,23 +2,13 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
-
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-SESSION_DRIVER=file
-QUEUE_DRIVER=sync
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+DB_CONNECTION=oracle
+DB_HOST=localhost
+DB_PORT=1521
+DB_USERNAME=condr
+DB_PASSWORD=condr
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
