updates .env.example explications

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,11 +1,15 @@
 APP_ENV=local
-APP_KEY=
+# random app_key to be used by default; should be changed
+APP_KEY=AfotPtr/kdTWeosS03T3Ghtja6llz7fqBBRzxxwFY64=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost:8000
+# this also should be changed
+APP_URL=http://condr.lan
 
 DB_CONNECTION=oracle
-DB_HOST=localhost
+# oracledb is used if we use docker compose
+# otherwise change to oracle host, like localhost or anything
+DB_HOST=oracledb
 DB_PORT=1521
 DB_USERNAME=condr
 DB_PASSWORD=condr
