updates .env.example description

--- a/app/.env.example
+++ b/app/.env.example
@@ -3,12 +3,12 @@ APP_ENV=local
 APP_KEY=AfotPtr/kdTWeosS03T3Ghtja6llz7fqBBRzxxwFY64=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-# this also should be changed
+# this also should be changed accordingly
 APP_URL=http://condr.lan
 
 DB_CONNECTION=oracle
-# oracledb is used if we use docker compose
-# otherwise change to oracle host, like localhost or anything
+# oracledb for docker compose
+# localhost or anything if else
 DB_HOST=oracledb
 DB_PORT=1521
 DB_USERNAME=condr
