--- a/Dockerfiles/apache-virtualhosts/100-condr.conf.example
+++ b/Dockerfiles/apache-virtualhosts/100-condr.conf.example
@@ -5,7 +5,7 @@
 
 <VirtualHost *:80>
    ServerName condr.lan
-   ProxyPass / http://app/public
+   ProxyPass / http://app/public/
 </VirtualHost>
 
 <VirtualHost *:80>
