added new collection

--- a/app/composer.json
+++ b/app/composer.json
@@ -9,6 +9,7 @@
         "barryvdh/laravel-debugbar": "^2.3",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
+        "laravelcollective/html": "^5.2.0",
         "yajra/laravel-oci8": "^5.4"
     },
     "require-dev": {
