--- a/app/composer.json
+++ b/app/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.3",
+        "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.2.0",
+        "laravelcollective/remote": "^5.4",
         "yajra/laravel-oci8": "^5.4"
     },
     "require-dev": {
