Finally we can run project in dev mode without apache!
using php artisan serve and the new php7cli-with-oci8 image

--- a/app/.env.example
+++ b/app/.env.example
@@ -4,7 +4,7 @@ APP_KEY=AfotPtr/kdTWeosS03T3Ghtja6llz7fqBBRzxxwFY64=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 # this also should be changed accordingly
-APP_URL=http://condr.lan
+APP_URL=http://localhost:8000
 
 DB_CONNECTION=oracle
 # oracledb for docker compose
