--- a/app/composer.json
+++ b/app/composer.json
@@ -6,9 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "algolia/algoliasearch-client-php": "^1.18",
+        "algolia/algoliasearch-laravel": "^1.7",
         "barryvdh/laravel-debugbar": "^2.3",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
+        "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.2.0",
         "laravelcollective/remote": "^5.4",
