Ads algolia configuration to .env

--- a/app/.env.example
+++ b/app/.env.example
@@ -6,6 +6,10 @@ APP_LOG_LEVEL=debug
 # this also should be changed accordingly
 APP_URL=http://localhost:8000
 
+// search api key
+ALGOLIA_APP_ID=
+ALGOLIA_SECRET=
+
 DB_CONNECTION=oracle
 # oracledb for docker compose
 # localhost or anything if else
