--- a/app/.env.example
+++ b/app/.env.example
@@ -1,12 +1,13 @@
 APP_ENV=local
 # random app_key to be used by default; should be changed
 APP_KEY=AfotPtr/kdTWeosS03T3Ghtja6llz7fqBBRzxxwFY64=
+APP_WEBHOOKKEY=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 # this also should be changed accordingly
 APP_URL=http://localhost:8000
 
-// search api key
+# search api key
 ALGOLIA_APP_ID=
 ALGOLIA_SECRET=
 
