ads authors in documentation

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,6 @@
-title: ConDr (Consumer Decision Maker)
-description: Proiect realizat în cadrul materiei Tehnologii Web, an univ. 2016-2017, Facultatea de Informatică din Iaşi
+title: ConDr
+description: Proiect realizat în cadrul materiei Tehnologii Web, an univ. 2016-2017
+college: Facultatea de Informatică din Iaşi
 show_downloads: true
 google_analytics:
 theme: 
