--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: ConDr
 description: Proiect realizat în cadrul materiei Tehnologii Web, an univ. 2016-2017
-college: Facultatea de Informatică din Iaşi
+college: Facultatea de Informatică Iaşi
 show_downloads: true
 google_analytics:
 theme: 
