Add CURLOPT_SSL_VERIFYPEER in env

--- a/app/.env.example
+++ b/app/.env.example
@@ -11,6 +11,9 @@ APP_URL=http://localhost:8000
 ALGOLIA_APP_ID=
 ALGOLIA_SECRET=
 
+// verify ssl for curl requests
+CURLOPT_SSL_VERIFYPEER=true
+
 DB_CONNECTION=oracle
 # oracledb for docker compose
 # localhost or anything if else
